--- a/src/components/seachbar/seach.css
+++ b/src/components/seachbar/seach.css
@@ -2,20 +2,29 @@
 .searchwrap {
   display: flex;
   align-items: center; /* 세로 방향 중앙 정렬 */
-  justify-content: center;
+  justify-content: flex-start;
   padding: 10px; /* 패딩 */
   margin: 40px;
 }
 
 .lefttitle {
-  margin-right: 20px; /* 오른쪽에 간격 제공 */
+  margin-right: 10px; /* 오른쪽에 간격 제공 */
   /* 타이틀 스타일 */
   font-weight: bold;
 }
 
 .searchbox {
+  margin-left: 100px;
   flex-grow: 1; /* 나머지 공간을 채우도록 설정 */
   padding: 5px; /* 편안한 입력을 위한 패딩 */
   border: 1px solid #ccc; /* 테두리 */
   border-radius: 4px; /* 둥근 모서리 */
+}
+
+.writebox {
+  margin-left: auto;
+  /* 기존 스타일 유지 */
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
