--- a/src/components/maincontens/maincontens.css
+++ b/src/components/maincontens/maincontens.css
@@ -1,10 +1,10 @@
 .mainContents {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3개의 열 */
-  grid-template-rows: repeat(3, 1fr); /* 3개의 행 */
-  grid-gap: 10px; /* 그리드 사이의 간격 */
+  grid-template-columns: repeat(4, 1fr); /* 3개의 열 */
+  grid-template-rows: repeat(4, 1fr); /* 3개의 행 */
+  grid-gap: 50px; /* 그리드 사이의 간격 */
   width: 100%;
-  min-height: 600px;
+  height: 100%;
   justify-content: center;
 }
 
@@ -23,9 +23,14 @@
   color: black; /* 텍스트 색상 */
   border-radius: 5px; /* 모서리 둥글게 */
 }
-@media (min-width: 768px) {
-  .mainContents {
-    width: 1500px;
-    height: 1000px;
-  }
+
+.mainThumbNail {
+  width: 100%;
+  height: 100%;
 }
+/* @media (min-width: 768px) {
+  .mainContents {
+    width: 500px;
+    height: 300px;
+  }
+} */
