--- a/src/components/menubar/menubar.css
+++ b/src/components/menubar/menubar.css
@@ -8,7 +8,7 @@
 }
 
 .cute > ul {
-  background-color: #f0f0f0; /* 배경색 */
+  background-color: #bb0fad; /* 배경색 */
   padding: 10px; /* 패딩 */
   text-align: center; /* 텍스트 가운데 정렬 */
   border: 1px solid #ddd; /* 테두리 */
@@ -23,7 +23,7 @@
 .button {
   background-color: lightgray; /* 버튼 배경색 */
   color: black; /* 버튼 글씨색 */
-  border-radius: 5px; /* 버튼 모서리 둥글게 */
+  border-radius: 30px; /* 버튼 모서리 둥글게 */
   /* 기타 버튼 공통 스타일 */
 }
 
