--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,5 @@
 body {
   background-color: white;
-  width: 100%;
-  height: 100%;
+  width: 100vw; /* 뷰포트의 너비와 같게 설정 */
+  height: 100vh; /* 뷰포트의 높이와 같게 설정 */
 }
