--- a/src/components/detailPage/detailPage.css
+++ b/src/components/detailPage/detailPage.css
@@ -4,8 +4,9 @@
   grid-template-rows: repeat(6, 1fr); /* 6개의 행 */
   grid-row-gap: 10px; /* 행 사이의 간격 */
   width: 100%;
-  height: 1000px;
+  height: 100px;
   justify-content: center;
+  background-color: green;
 }
 
 .detailContents1,
@@ -21,7 +22,7 @@
 }
 @media (min-width: 768px) {
   .detailPage {
-    width: 1500px;
+    width: 1000px;
     height: 1000px;
   }
 }
