proxy 사용, http 통신 복원 확인

--- a/src/components/menubar/menubar.css
+++ b/src/components/menubar/menubar.css
@@ -8,7 +8,7 @@
 }
 
 .cute > ul {
-  background-color: #bb0fad; /* 배경색 */
+  background-color: #b5bb0f; /* 배경색 */
   padding: 10px; /* 패딩 */
   text-align: center; /* 텍스트 가운데 정렬 */
   border: 1px solid #ddd; /* 테두리 */
