--- a/src/components/detailPage/detailPage.css
+++ b/src/components/detailPage/detailPage.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100px;
   justify-content: center;
-  background-color: green;
+  background-color: beige;
 }
 
 .detailContents1,
