검색로직 수정 완료

--- a/src/components/writePage/writePage.css
+++ b/src/components/writePage/writePage.css
@@ -47,12 +47,12 @@
 .submit-button {
   background-color: #007bff;
   color: white;
-  border: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s ease;
+  border: 3px solid aliceblue;
 }
 
 .submit-button:hover {
