--- a/src/components/seachbar/seach.css
+++ b/src/components/seachbar/seach.css
@@ -28,3 +28,10 @@
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+
+.button-search {
+  /* 기존 스타일 유지 */
+  padding: 30px;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+}
