--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -48,6 +48,15 @@
   animation: RainbowAnimation 3s ease infinite;
 }
 
+.myPage-btn {
+  background-color: #534983; /* 기본 배경색 */
+  color: white; /* 텍스트 색상 */
+  padding: 15px 30px; /* 상하, 좌우 패딩 */
+  border: none; /* 테두리 없음 */
+  border-radius: 5px; /* 모서리 둥글게 */
+  cursor: pointer; /* 마우스 포인터를 손 모양으로 변경 */
+}
+
 @-webkit-keyframes RainbowAnimation {
   0% {
     background-position: 0% 82%;
