--- a/src/components/menubar/menubar.css
+++ b/src/components/menubar/menubar.css
@@ -1,14 +1,14 @@
 /* menubar.css */
-.cute {
+.menubar-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 4개의 열, 각각 동일한 크기 */
+  grid-template-columns: repeat(5, 1fr); /* 4개의 열, 각각 동일한 크기 */
   grid-gap: 10px; /* 그리드 항목 사이의 간격 */
   list-style: none; /* 기본 리스트 스타일 제거 */
   padding: 0; /* 기본 패딩 제거 */
 }
 
-.cute > ul {
-  background-color: #b5bb0f; /* 배경색 */
+.menubar-container > ul {
+  background-color: #0fbbaf; /* 배경색 */
   padding: 10px; /* 패딩 */
   text-align: center; /* 텍스트 가운데 정렬 */
   border: 1px solid #ddd; /* 테두리 */
@@ -16,7 +16,7 @@
   transition: background-color 0.3s; /* 배경색 변경 효과 */
 }
 
-.cute > ul:hover {
+.menubar-container > ul:hover {
   background-color: #e0e0e0; /* 마우스 오버 시 배경색 변경 */
 }
 
