--- a/src/components/myPage/myPage.css
+++ b/src/components/myPage/myPage.css
@@ -1,11 +1,12 @@
-.mypage-render-box {
-  display: flex;
-  align-items: center; /* 중앙 정렬 */
-  border: 1px solid #ccc; /* 테두리 */
-  padding: 10px;
+.mypage-container {
+  display: flex; /* Flexbox 레이아웃 사용 */
+  justify-content: space-around; /* 각 항목 사이에 균등한 간격을 두어 배치 */
+  align-items: center; /* 세로 축 중앙 정렬 */
+  padding: 20px; /* 패딩으로 내부 여백 제공 */
 }
 
-.mypage-render-box > div {
-  flex: 1;
-  padding: 10px;
+.menuItem {
+  cursor: pointer; /* 마우스 오버시 포인터 모양 변경 */
+  padding: 10px; /* 패딩으로 클릭 영역 확장 */
+  list-style: none; /* 기본 목록 스타일 제거 */
 }
