--- a/src/components/signUp/signUp.css
+++ b/src/components/signUp/signUp.css
@@ -50,6 +50,16 @@
 .naver-logo {
   height: 36px;
 }
+
+.nomal-login-btn {
+  padding: 10px 15px;
+  background-color: #3939dd;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 .recovery-options {
   margin-top: 20px; /* 로그인 버튼들과의 간격 조정 */
   text-align: center; /* 버튼들을 중앙 정렬 */
