declare 형님 - ts는 .tsx, .ts 에 관심이 많기 때문에 외에 것들은 declare 형님을 통해서 따로 설정해주자

--- a/src/components/myPage/myPage.css
+++ b/src/components/myPage/myPage.css
@@ -10,3 +10,17 @@
   padding: 10px; /* 패딩으로 클릭 영역 확장 */
   list-style: none; /* 기본 목록 스타일 제거 */
 }
+
+.mypage-container:hover {
+  background-color: aliceblue;
+}
+.delete-btn-myWrite {
+  background-color: red;
+  width: 100px;
+  height: 100px;
+}
+.delete-btn-myComments {
+  background-color: blue;
+  width: 100px;
+  height: 100px;
+}
