클라이언트에서 url의 명확성을 인지시키기 위해서 메뉴바는 useParams의 역할로 축소

--- a/src/components/menubar/menubar.css
+++ b/src/components/menubar/menubar.css
@@ -8,7 +8,7 @@
 }
 
 .menubar-container > ul {
-  background-color: #0fbbaf; /* 배경색 */
+  background-color: #42d538; /* 배경색 */
   padding: 10px; /* 패딩 */
   text-align: center; /* 텍스트 가운데 정렬 */
   border: 1px solid #ddd; /* 테두리 */
@@ -29,4 +29,24 @@
 
 .button:hover {
   background-color: gray; /* 마우스 오버 시 배경색 변경 */
+}
+.sparkle {
+  position: relative;
+  overflow: hidden;
+}
+
+.sparkle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -75%;
+  width: 50%;
+  height: 100%;
+  background: gold;
+  transform: skewX(-25deg);
+  transition: left 0.5s ease-in-out;
+}
+
+.sparkle:hover::before {
+  left: 125%;
 }
