--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -56,6 +56,16 @@
   border-radius: 5px; /* 모서리 둥글게 */
   cursor: pointer; /* 마우스 포인터를 손 모양으로 변경 */
 }
+.logoutButton {
+  background-color: #534983; /* 기본 배경색 */
+  color: white; /* 텍스트 색상 */
+  padding: 15px 30px; /* 상하, 좌우 패딩 */
+  border: none; /* 테두리 없음 */
+  border-radius: 5px; /* 모서리 둥글게 */
+  cursor: pointer; /* 마우스 포인터를 손 모양으로 변경 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+  transition: background 0.5s ease; /* 배경색 변화 애니메이션 */
+}
 
 @-webkit-keyframes RainbowAnimation {
   0% {
