--- a/src/components/nonSocialLogin/nonSocial.css
+++ b/src/components/nonSocialLogin/nonSocial.css
@@ -1,4 +1,6 @@
 .non-social-login-box {
+  width: 50vw;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,10 +10,14 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background: white;
-  padding: 20px;
+  padding: 40px;
+  margin-top: 100px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
+.non-social-form-box {
+  width: 50vw;
+  height: 50vh;
+}
 .non-social-login-box form {
   display: flex;
   flex-direction: column;
