--- a/src/components/recoverUserInfo/recover.css
+++ b/src/components/recoverUserInfo/recover.css
@@ -6,12 +6,20 @@
   text-align: center;
   margin-top: 20px;
 }
-
+.Recover-section h1 {
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
 .Recover-box {
   display: flex;
   justify-content: space-between;
   width: 100%; /* 전체 너비를 사용 */
   margin-top: 20px;
+}
+.Recover-box h2 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
 }
 
 section {
@@ -24,16 +32,31 @@ section {
 
 .input-group-recover-id,
 .input-group-recover-pw {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
   margin-bottom: 20px;
 }
-
-.button-user-pw-button,
-.button-user-id-button {
-  width: 100%;
-  padding: 10px 0;
-  background-color: #007bff;
-  color: white;
+.input-group-recover-id input,
+.input-group-recover-pw input {
+  padding: 15px;
+  font-size: 1.2em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.user-id-button,
+.user-pw-button {
+  padding: 15px;
+  font-size: 1.2em;
+  background-color: #00ff48;
+  color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.user-id-button:hover,
+.user-pw-button:hover {
+  background-color: #0056b3;
 }
