--- a/src/components/seachbar/seach.css
+++ b/src/components/seachbar/seach.css
@@ -21,17 +21,29 @@
   border-radius: 4px; /* 둥근 모서리 */
 }
 
-.writebox {
+.write-button {
   margin-left: auto;
   /* 기존 스타일 유지 */
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  background-color: #534983; /* 기본 배경색 */
+  color: white; /* 텍스트 색상 */
+  padding: 15px 30px; /* 상하, 좌우 패딩 */
+  border: none; /* 테두리 없음 */
+  border-radius: 5px; /* 모서리 둥글게 */
+  cursor: pointer; /* 마우스 포인터를 손 모양으로 변경 */
+}
+.write-button:hover {
+  background-color: gray; /* 마우스 오버 시 배경색 변경 */
+}
+.search-button {
+  /* 기존 스타일 유지 */
+  background-color: #534983; /* 기본 배경색 */
+  color: white; /* 텍스트 색상 */
+  padding: 15px 30px; /* 상하, 좌우 패딩 */
+  border: none; /* 테두리 없음 */
+  border-radius: 5px; /* 모서리 둥글게 */
+  cursor: pointer; /* 마우스 포인터를 손 모양으로 변경 */
 }
 
-.button-search {
-  /* 기존 스타일 유지 */
-  padding: 30px;
-  border: 1px solid #cccccc;
-  border-radius: 4px;
+.search-button:hover {
+  background-color: gray; /* 마우스 오버 시 배경색 변경 */
 }
