--- a/src/components/signUp/signUp.css
+++ b/src/components/signUp/signUp.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 150vh;
+  height: 100vh;
   background-image: linear-gradient(
     45deg,
     #ff0047,
@@ -16,55 +16,94 @@
 }
 
 .login-box {
-  padding: 50px;
   background: white;
+  padding: 20px;
   border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 600px;
+  width: 100%;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .loginTitle {
-  margin-top: 75vh;
+  margin-top: 5vh;
   padding: 10px 20px;
-  font-family: "Arial", sans-serif;
+  /* font-family: "Arial", sans-serif; */
   font-size: 24px;
-  color: #ffef00;
+  color: #00bbff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* 텍스트에 그림자 추가 */
   border-radius: 4px;
   display: inline-block; /* 블록 요소로 설정 */
 }
+.input-group {
+  margin-bottom: 10px;
+  text-align: left;
+}
 
-.google-login-btn {
-  padding: 10px 15px;
-  background-color: #dd4b39;
-  color: white;
+.input-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.input-group input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.submit-btn {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
 }
-
-.google-login-btn:hover {
-  background-color: #e74b37;
+.login-buttons-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
 }
-.naver-logo {
-  height: 36px;
-}
-
+.google-login-btn,
+.naver-login-btn,
 .nomal-login-btn {
-  padding: 10px 15px;
-  background-color: #3939dd;
-  color: white;
+  flex: 1;
+  margin: 0 5px; /* 버튼 간격을 위해 좌우 마진 추가 */
+  padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: greenyellow;
 }
-.recovery-options {
-  margin-top: 20px; /* 로그인 버튼들과의 간격 조정 */
-  text-align: center; /* 버튼들을 중앙 정렬 */
+.nomal-login-btn {
+  background-color: greenyellow;
+}
+.google-login-btn img,
+.naver-login-btn img {
+  display: inline-block;
+  vertical-align: middle;
 }
 
+.recovery-options {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Arial", sans-serif;
+}
+
+.recovery-options button {
+  background: none;
+  border: none;
+  color: greenyellow;
+  cursor: pointer;
+  padding: 0;
+}
 @keyframes gradientBG {
   0% {
     background-position: 0% 50%;
