--- a/src/components/writePage/writePage.css
+++ b/src/components/writePage/writePage.css
@@ -1,5 +1,6 @@
-.container {
+.write-container {
   max-width: 1000px;
+  height: 100vh;
   margin: auto;
   padding: 20px;
   background-color: #f9f9f9;
@@ -38,8 +39,8 @@
 }
 
 .photo-thumbnail {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   object-fit: cover; /* 이미지 비율 유지하며 요소에 맞춤 */
   border-radius: 4px;
 }
