--- a/src/components/recoverUserInfo/recover.css
+++ b/src/components/recoverUserInfo/recover.css
@@ -60,3 +60,8 @@ section {
 .user-pw-button:hover {
   background-color: #0056b3;
 }
+.error-message {
+  color: red;
+  margin-top: 10px;
+  font-size: 1em;
+}
