--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,7 +49,7 @@
 }
 
 .myPage-btn {
-  background-color: #534983; /* 기본 배경색 */
+  background-color: #42d538;
   color: white; /* 텍스트 색상 */
   padding: 15px 30px; /* 상하, 좌우 패딩 */
   border: none; /* 테두리 없음 */
@@ -57,7 +57,7 @@
   cursor: pointer; /* 마우스 포인터를 손 모양으로 변경 */
 }
 .logoutButton {
-  background-color: #534983; /* 기본 배경색 */
+  background-color: #42d538;
   color: white; /* 텍스트 색상 */
   padding: 15px 30px; /* 상하, 좌우 패딩 */
   border: none; /* 테두리 없음 */
