--- a/src/components/seachbar/seach.css
+++ b/src/components/seachbar/seach.css
@@ -24,7 +24,7 @@
 .write-button {
   margin-left: auto;
   /* 기존 스타일 유지 */
-  background-color: #534983; /* 기본 배경색 */
+  background-color: #42d538;
   color: white; /* 텍스트 색상 */
   padding: 15px 30px; /* 상하, 좌우 패딩 */
   border: none; /* 테두리 없음 */
@@ -36,7 +36,7 @@
 }
 .search-button {
   /* 기존 스타일 유지 */
-  background-color: #534983; /* 기본 배경색 */
+  background-color: #42d538;
   color: white; /* 텍스트 색상 */
   padding: 15px 30px; /* 상하, 좌우 패딩 */
   border: none; /* 테두리 없음 */
