--- a/src/components/signUp/signUp.css
+++ b/src/components/signUp/signUp.css
@@ -26,10 +26,10 @@
 }
 
 .loginTitle {
-  margin-top: 5vh;
+  margin-top: 2vh;
   padding: 10px 20px;
   /* font-family: "Arial", sans-serif; */
-  font-size: 24px;
+  font-size: 34px;
   color: #00bbff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* 텍스트에 그림자 추가 */
   border-radius: 4px;
@@ -80,10 +80,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: greenyellow;
+  background-color: white;
 }
 .nomal-login-btn {
-  background-color: greenyellow;
+  background-color: rgb(47, 206, 255);
 }
 .google-login-btn img,
 .naver-login-btn img {
@@ -100,9 +100,10 @@
 .recovery-options button {
   background: none;
   border: none;
-  color: greenyellow;
+  color: rgb(47, 206, 255);
   cursor: pointer;
   padding: 0;
+  margin-top: 10px;
 }
 @keyframes gradientBG {
   0% {
