type orm 마이그레이션 충돌, 엔티티의 업데이트 사항이 반영이 안됨

--- a/src/components/maincontens/compatibilityToJangKaSulYoo/compatibility.css
+++ b/src/components/maincontens/compatibilityToJangKaSulYoo/compatibility.css
@@ -66,7 +66,9 @@ button {
 button:hover {
   background-color: #0056b3;
 }
-
+.section-gif {
+  max-width: 50%;
+}
 .right-gif-box {
   flex: 1;
   background-color: #ede6e6;
@@ -88,9 +90,56 @@ button:hover {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+
   margin-top: 20px;
 }
 
 .submit-button:hover {
   background-color: #218838;
+}
+
+@media (max-width: 768px) {
+  .compatibility-box {
+    width: 90vw; /* 전체 너비 사용 */
+    padding: 10px; /* 패딩 조정 */
+  }
+
+  .sections-container {
+    flex-direction: column; /* 세로로 정렬 */
+    gap: 10px; /* 간격 조정 */
+  }
+
+  .input-section-wrapper,
+  .right-gif-box {
+    width: 100%; /* 전체 너비 사용 */
+    margin: 0; /* 마진 제거 */
+    padding: 10px; /* 패딩 조정 */
+  }
+
+  .select-target-section {
+    margin-top: 20px; /* 마진 조정 */
+  }
+
+  .section-gif {
+    max-width: 100%; /* 전체 너비 사용 */
+  }
+
+  .submit-button {
+    width: 100%; /* 전체 너비 사용 */
+    font-size: 1em; /* 폰트 크기 조정 */
+    padding: 10px; /* 패딩 조정 */
+  }
+
+  .user-name-input,
+  .sex-select,
+  .menubar-select,
+  .menubar-select-right {
+    font-size: 0.9em; /* 폰트 크기 조정 */
+    padding: 8px; /* 패딩 조정 */
+  }
+
+  button {
+    font-size: 0.9em; /* 폰트 크기 조정 */
+    padding: 8px; /* 패딩 조정 */
+  }
 }
