--- a/src/components/maincontens/compatibilityToJangKaSulYoo/renderCompatibility/renderCompatibility.css
+++ b/src/components/maincontens/compatibilityToJangKaSulYoo/renderCompatibility/renderCompatibility.css
@@ -1,6 +1,7 @@
 .render-comatibility-box {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .render-comatibility-box h1 {
