--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -100,3 +100,27 @@
     background-position: 0% 82%;
   }
 }
+
+/* 모바일 스타일 */
+@media (max-width: 768px) {
+  .header {
+    padding: 5px; /* 패딩 조정 */
+  }
+
+  .logo {
+    width: 60px; /* 로고 크기 줄임 */
+    margin-bottom: 5px; /* 하단 마진 추가 */
+  }
+
+  .title {
+    font-size: 1.2em; /* 글자 크기 줄임 */
+    left: 64%; /* 부모 요소의 중앙 */
+  }
+
+  .loginButton,
+  .myPage-btn,
+  .logoutButton {
+    padding: 10px 20px; /* 패딩 조정 */
+    font-size: 0.9em; /* 글자 크기 줄임 */
+  }
+}
