--- a/src/components/seachbar/seach.css
+++ b/src/components/seachbar/seach.css
@@ -11,6 +11,7 @@
   margin-right: 10px; /* 오른쪽에 간격 제공 */
   /* 타이틀 스타일 */
   font-weight: bold;
+  display: flex;
 }
 
 .searchbox {
@@ -46,4 +47,34 @@
 
 .search-button:hover {
   background-color: gray; /* 마우스 오버 시 배경색 변경 */
+}
+@media (max-width: 768px) {
+  .searchwrap {
+    justify-content: space-between; /* 요소 간 공간을 균등하게 분배 */
+    padding: 5px; /* 패딩 조정 */
+    bottom: 0;
+  }
+
+  .lefttitle,
+  .searchbox,
+  .search-button {
+    margin-right: 10px; /* 오른쪽에 간격 제공 */
+  }
+
+  .searchbox {
+    width: 60%; /* 검색창의 너비 설정 */
+  }
+
+  .search-button {
+    width: auto; /* 버튼의 너비 자동 설정 */
+    height: auto; /* 버튼의 높이 자동 설정 */
+    padding: 5px 10px; /* 패딩 조정 */
+    border-radius: 4px; /* 둥근 모서리 유지 */
+  }
+
+  .write-button {
+    margin-left: auto; /* 오른쪽 끝으로 이동 */
+    padding: 5px 10px; /* 패딩 조정 */
+    border-radius: 4px; /* 둥근 모서리 유지 */
+  }
 }
