--- a/src/components/nonSocialLogin/nonSocial.css
+++ b/src/components/nonSocialLogin/nonSocial.css
@@ -56,3 +56,7 @@
   width: 100%;
   /* 기타 버튼 스타일 유지 */
 }
+.non-social-selec .non-social-radio-box {
+  display: flex;
+  justify-content: space-between;
+}
