--- a/src/components/maincontens/maincontens.css
+++ b/src/components/maincontens/maincontens.css
@@ -9,6 +9,9 @@
 }
 
 .content {
+  display: flex;
+  flex-direction: column; /* 수직 정렬 */
+  gap: 50px; /* 자식 요소들 사이의 간격 */
   width: 100%;
   height: 100%;
   border: 1px solid #ddd; /* 테두리 */
@@ -20,10 +23,51 @@
 
 .mainThumbNail {
   width: 100%;
-  height: auto; /* 이미지 비율 유지 */
+  height: 100%; /* 이미지 비율 유지 */
   border-radius: 5px; /* 이미지 모서리 둥글게 */
 }
+.mainThumNail img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover; /* 이미지가 부모 요소를 채우도록 조정 */
+  display: block; /* 이미지의 아래 여백 문제를 해결 */
+}
 
+.details-container {
+  margin-bottom: 0px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+}
 .content:hover {
   background-color: #e0e0e0;
+}
+.details-container > h1 {
+  margin: 5px;
+}
+
+.main-writer {
+  margin-right: 20px;
+}
+.profile-pic {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+.display-block {
+  display: flex;
+  align-items: center; /* 이미지와 텍스트를 세로로 정렬 */
+  grid-column: span 1; /* 첫 번째 열에 배치 */
+  grid-row: span 1; /* 첫 번째 행에 배치 */
+}
+
+@media (max-width: 768px) {
+  .mainContents {
+    grid-template-columns: repeat(1, 1fr); /* 4개의 열 */
+    grid-template-rows: repeat(16, 1fr); /* 4개의 행 */
+  }
 }
