--- a/src/components/myPage/myPage.css
+++ b/src/components/myPage/myPage.css
@@ -17,11 +17,19 @@
 .mypage-container > ul:hover {
   background-color: #e0e0e0;
 }
+
 .mypage-container {
   display: flex;
   justify-content: space-between;
 }
+
+.mypage-render-box-myWrite {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .post-container {
+  width: 70%;
   display: flex;
   flex-direction: column;
   margin-bottom: 20px; /* 각 포스트 간의 간격 */
@@ -38,6 +46,12 @@
   display: flex;
   align-items: center;
 }
+.post-body > img {
+  width: 50%;
+  height: 500px;
+  object-fit: cover; /* 이미지가 부모 요소를 채우도록 조정 */
+  display: block; /* 이미지의 아래 여백 문제를 해결 */
+}
 
 .post-body img {
   margin-right: 20px; /* 이미지와 버튼 사이의 간격 */
@@ -53,4 +67,68 @@
 
 .delete-btn-myWrite:hover {
   background-color: #ff1c1c;
+}
+
+.mypage-render-box-myComments {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mypage-myComments-wrap {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+}
+
+.mypage-myComments {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.mypage-myComments-renderPost {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* 두 개의 열을 동일한 너비로 설정 */
+  grid-template-rows: auto auto; /* 두 개의 행을 자동 높이로 설정 */
+  gap: 10px; /* 그리드 항목 간의 간격을 설정 */
+  padding: 20px;
+  border: 1px solid #ccc;
+}
+.renderPost1 {
+  grid-column: 1 / 2; /* 첫 번째 열에 배치 */
+  grid-row: 1 / 2; /* 첫 번째 행에 배치 */
+}
+
+.renderPost2 {
+  grid-column: 2 / 3; /* 두 번째 열에 배치 */
+  grid-row: 1 / 2; /* 첫 번째 행에 배치 */
+  text-align: right; /* 오른쪽 정렬 */
+}
+
+.renderPost3 {
+  grid-column: 1 / 3; /* 첫 번째 열과 두 번째 열을 합쳐서 배치 */
+  grid-row: 2 / 3; /* 두 번째 행에 배치 */
+  width: 100%; /* 이미지의 너비를 100%로 설정 */
+  cursor: pointer; /* 마우스 커서를 포인터로 설정 */
+}
+.mypage-render-box-myLikes {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.mypage-myLikes {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px; /* 각 포스트 간의 간격 */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.mypage-myLikes > img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover; /* 이미지가 부모 요소를 채우도록 조정 */
+  display: block; /* 이미지의 아래 여백 문제를 해결 */
 }
