--- a/src/components/searchRendering/searchRenderring.css
+++ b/src/components/searchRendering/searchRenderring.css
@@ -26,5 +26,14 @@
 
 .mainThumbNail {
   width: 100%;
-  height: 100%;
+  height: 400px;
+  object-fit: cover; /* 이미지가 부모 요소를 채우도록 조정 */
+  display: block; /* 이미지의 아래 여백 문제를 해결 */
+}
+
+@media (max-width: 756px) {
+  .mainContents {
+    grid-template-columns: repeat(1, 1fr); /* 4개의 열 */
+    grid-template-rows: repeat(16, 1fr); /* 4개의 행 */
+  }
 }
