--- a/src/components/soical-nickName/nickNAme.css
+++ b/src/components/soical-nickName/nickNAme.css
@@ -1,3 +1,10 @@
+.nick-name-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .nick-name-input,
 .nick-name-button {
   width: 300px; /* 입력 필드와 버튼의 너비 */
@@ -15,8 +22,13 @@
   color: white; /* 버튼 내용 색상 */
   border: none; /* 버튼 테두리 제거 */
 }
+.select-star {
+  width: 300px; /* 원하는 너비로 설정 */
+  margin-bottom: 5%;
+}
 
 .nick-name-input:focus,
 .nick-name-button:focus {
   outline: none; /* 입력 필드와 버튼 포커스 시 테두리 제거 */
+  margin-top: 20px;
 }
